# imunemais

./: README.md  angular.json  bot_telegram.py  install.txt  login_dados.json  package-lock.json  package.json  requirements.txt  teste.py  web_server.py
HTML_CSS/: index.html  style.css
back-end-alt/: crud.py  models.py  schemas.py
back-end-alt/routes/: profissionais.py
backend/: database.py  main.py  models.py
front-end/: angular.json  imunemais.db  package-lock.json  package.json
imunemais-api/: .gitignore  pyproject.toml
imunemais-api/imunemai_api/: main.py
imunemais-api/imunemai_api/src/: app.py
imunemais-api/imunemai_api/src/api/v1/endpoints/: admin_controller.py  autenticacao_controller.py  enfermeiro_controller.py  testeemail.py  usuario_controller.py
imunemais-api/imunemai_api/src/auth/: crypto.py  mascaradores.py
imunemais-api/imunemai_api/src/database/: database.py  models.py
imunemais-api/imunemai_api/src/schemas/: autenticacao_schemas.py  funcionario_schemas.py  usuario_schemas.py  vacina_schema.py
imunemais-api/imunemai_api/src/service/: adm_autenticacao_service.py  autenticacao_service.py
imunemais-api/imunemai_api/src/static/perfis/: 4baaffef0b4947d9bf856679a644306c_ilustracao.avif  740802a9956041b8a42299c8bd7cc21e_homem-com-os-bracos-cruzados_23-2147646425.avif  bf76ef68e02f4ed5b6ec0cab2fbcf954_jovem-adulto-bonito-sorrindo-alegre-e-casualmente-olhando-para-baixo-e-apontando-para-o-peito_1194-214720.avif  f5cf7c3fe6c94aaaacd2c8ca194eb4ef_pessoa-de-origem-indiana-se-divertindo_23-2150285283.avif
src/: styles.scss
(+220 files in other folders)
